--- a/theme/home.less
+++ b/theme/home.less
@@ -198,9 +198,6 @@
                 input {
                     padding: .75em 1em;
                 }
-                i {
-                    bottom: 1em;
-                };
             }
         }
 
