--- a/react-common/styles/controls/Input.less
+++ b/react-common/styles/controls/Input.less
@@ -58,7 +58,8 @@
 .common-input-group {
     & > i.fas, i.far, .icon, .xicon {
         position: absolute;
-        bottom: 0.3rem;
+        bottom: 50%;
+        transform: translateY(50%);
         right: 0.5rem;
         width: 1.25rem;
         margin-right: 0;
